--- a/userpage.html
+++ b/userpage.html
@@ -14,7 +14,6 @@
         <div style="text-align: right;position: absolute;right: 0;top: 3vh;">
             <span class="header2">欢迎~</span><span class="header2" id="pageusername">用户名</span>
             <span class="header2">|</span><span class="header2" onclick="refreshComment()">刷新</span>
-            
         </div>
     </div>
     <div class="postmytextBox" id="postmytextBox">
@@ -321,7 +320,7 @@
 
     </div>
     <div class="msgfontBox" id="msgfontBox">
-        <span  id="msg">看得见我吗？
+        <span  id="msg">
         </span>
 
     </div>
