--- a/userpage.html
+++ b/userpage.html
@@ -18,9 +18,14 @@
     </div>
     <div class="postmytextBox" id="postmytextBox">
         <!--发表留言-->
-        <span class="header2">写下你的留言吧~~</span><span class="header2">|</span><span class="header2">发表图片</span>
+        <span class="header2">写下你的留言吧~~</span>
         <textarea cols="52" wrap="hard" class="inputfive" placeholder="限字" id="writeMytext"></textarea>
-        <span class="header2" onclick="postmytext()" style="position:relative;top: 7vw;">完成</span>
+        
+        <span class="header2" style="position: absolute;
+        top: 25vh;">发表图片</span>
+        <span class="header2" onclick="postmytext()" style="position: relative;
+        top: 20vh;
+        left: 25vw;">完成</span>
     </div>
     <div class="pagethreeBoxone">
         <div style="display: flex;">
