--- a/userpage.html
+++ b/userpage.html
@@ -7,7 +7,7 @@
     <link href="liuyanban.css" rel="stylesheet" type="text/css">
 </head>
 
-<body class="body">
+<body class="body" onload="toUserPage()">
     <div class="header">
         <!--页眉部分-->
         <div><span class="header1">留言板</span><span id="finish" class="finish" onclick="finish()">完成</span></div>
