还需要一天的时间完善

--- a/loginpage.html
+++ b/loginpage.html
@@ -23,8 +23,9 @@
         <div class="messageboxone">
             <p id="loginmsg" class="msgfont"></p>
         </div>
-    
-    <div class="pagetwoBoxone"><input class="buttontwo" type="button" value="登陆" onclick="postLogin()"></div></div>
-    
+
+        <div class="pagetwoBoxone"><input class="buttontwo" type="button" value="登陆" onclick="postLogin()"></div>
+    </div>
+
 </body>
 <script src="liuyanban.js"></script>
