暂时完成了

--- a/registerpage.html
+++ b/registerpage.html
@@ -32,7 +32,10 @@
     <div class="pagetwoBoxtwo"><input class="buttontwo" type="button" value="注册" onclick="postRegister()"></div>
     </div>
 <div class="messageboxone">
-    <p id="loginmsg" class="msgfont"></p>
+    <p id="loginmsg" class="msgfont" style="
+    word-wrap: break-word;
+    word-break:normal;
+"></p>
 </div>
 <div class="messageboxtwo">
     <p id="registermsg" class="msgfont"></p>
