--- a/userpage.html
+++ b/userpage.html
@@ -68,11 +68,11 @@
         <!--修改密码页面-->
         <div style="position: absolute;top: 15vh;">
             <span class="fonttwo">输入旧密码：</span>
-            <input type="text" class="inputthree" id="oldPassword">
+            <input type="password" class="inputthree" id="oldPassword">
         </div>
         <div style="position: absolute;top: 25vh;">
             <span class="fonttwo">输入新密码：</span>
-            <input type="text" class="inputthree" id="newPassword">
+            <input type="password" class="inputthree" id="newPassword">
         </div>
         <input class="buttontwo" style="position: absolute;top: 35vh;left: 30vw;" type="button" value="完成" onclick="finishPasswordChange()">
     </div>
